Assignment main page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
     <head>
-        <title>test</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
+        <meta name="description" content="Assignment portal page for Josh Watkins in CIT 230: web front-end developement at BYU-I">
+        <link rel="stylesheet" herf="css/main.css">
+        <title>Cit 230 Assignment Portal | Joshua Watkins | BYU-Idaho</title>
     </head>
     <body>
-        <h1>test page</h1>
+        <header>
+            <img src="<!--profile pic-->" alt="My profile picture">
+            <h1>   </h1>
+        </header>
+        <main>
+            <h2>CIT 230-Assignment Portal</h2>
+            <ul>
+                <li>lesson ##: <a href="#">Assignment Label</a></li>
+            </ul>
+        </main>
+        <footer>
+<p><!--html entity copyright symbol-->2019 | joshua michael watkins | Vaginia, United States | <a herf="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
+        </footer>
     </body>
 </html>
