--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
         <link rel="stylesheet" herf="css/main.css">
         <title>Cit 230 Assignment Portal | Joshua Watkins | BYU-Idaho</title>
     </head>
+    
     <body>
         <header>
             <img src="<!--profileic-->" alt="My profile picture">
             <h1>   </h1>
         </header>
+
         <main>
             <h2>CIT 230-Assignment Portal</h2>
             <ul>
                 <li>lesson ##: <a href="#">Assignment Label</a></li>
             </ul>
         </main>
+
         <footer>
-<p><!--html entity copyright symbol-->2019 | joshua michael watkins | Vaginia, United States | <a herf="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
+<p><!--html entity copyright symbol-->2019 | joshua michael watkins | Vaginia, United States | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
     </body>
+
 </html>
