copyright, profile, w1 formatted

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <body>
         <header>
-            <img src="<!--profileic-->" alt="My profile picture">
+            <img src="images/31388514_1613062658747765_3822769859809247232_o (1).jpg" alt="My profile picture">
             <h1>   </h1>
         </header>
 
@@ -22,7 +22,7 @@
         </main>
 
         <footer>
-<p><!--html entity copyright symbol-->2019 | joshua michael watkins | Vaginia, United States | <a href="http://www.byui.edu/online/">BYU-Idaho Online Learning</a></p>
+<p><&copy;2019 | joshua michael watkins | Vaginia, United States | <a href="http://www.byui.edu/online/">BYU-Idaho Online Learning</a></p>
         </footer>
     </body>
 
