--- a/w1-index.html
+++ b/w1-index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html> <html> <head> <meta charset="utf-8"> <title>JW basic page</title> </head> <body> <h1>Joshua Watkins</h1> <img src="images/31388514_1613062658747765_3822769859809247232_o.jpg" alt="my face" height= "25%" width= "25%"/> <h2>VA, United States</h2> <p> Laptop<br> <b>Operating System:</b> windows 10 <br> <b>Processor:</b> intel core i7-8550U<br> <b>RAM: </b>4 GB <br> <br> Desktop<br> <b>Operating System: </b> windows 10<br> <b>Processor:</b> AMD quad-core A6-6310<br> <b>RAM: </b>6 GB <br> <!--computer info ram,operating sys, processor, --> </p> <a href="http://www.byui.edu/online/">Link to school</a> </body> </html>
+<!DOCTYPE html>
+ <html>
+      <head>
+           <meta charset="utf-8">
+            <title>JW basic page</title> 
+    </head> 
+        <body> 
+            <h1>Joshua Watkins</h1>
+             <img src="images/31388514_1613062658747765_3822769859809247232_o.jpg" alt="my face" height= "25%" width= "25%"/>
+              <h2>VA, United States</h2>
+               <p> Laptop<br>
+                     <b>Operating System:</b> windows 10 <br>
+                     <b>Processor:</b> intel core i7-8550U<br>
+                     <b>RAM: </b>4 GB <br>
+                <br>
+                 Desktop<br>
+                     <b>Operating System: </b> windows 10<br>
+                     <b>Processor:</b> AMD quad-core A6-6310<br>
+                     <b>RAM: </b>6 GB <br>
+                        <!--computer info ram,operating sys, processor, --> </p>
+                     <a href="http://www.byui.edu/online/">Link to school</a>
+        </body>
+                      </html>
