--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <body>
         <header>
-            <img src="images/31388514_1613062658747765_3822769859809247232_o (1).jpg" alt="My profile picture">
+            <img src="images/31388514_1613062658747765_3822769859809247232_o (1).jpg" alt="My profile picture"height= "25%" width= "25%">
             <h1>   </h1>
         </header>
 
