footer clean up

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </main>
 
         <footer>
-<p><&copy;2019 | joshua michael watkins | Vaginia, United States | <a href="http://www.byui.edu/online/">BYU-Idaho Online Learning</a></p>
+<p>&copy;2019 | joshua michael watkins | Vaginia, United States | <a href="http://www.byui.edu/online/">BYU-Idaho Online Learning</a></p>
         </footer>
     </body>
 
