--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <main>
             <h2>CIT 230-Assignment Portal</h2>
             <ul>
-                <li>lesson ##: <a href="#">Assignment Label</a></li>
+                <li>lesson 1: <a href="w1-index.html">basic html</a></li>
+                <li>lesson 3: <a href=""> assignment label</a></li>
+                <li>lesson 4: <a href=""> assignment label</a></li>
+                <li>lesson 5: <a href=""> assignment label</a></li>
             </ul>
         </main>
 
