--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <img src="images/31388514_1613062658747765_3822769859809247232_o (1).jpg" alt="My profile picture"height= "25%" width= "25%">
             <h1>   </h1>
-        </header>
+        </header>Joshua Watkins
 
         <main>
             <h2>CIT 230-Assignment Portal</h2>
