image fix on w1

--- a/w1-index.html
+++ b/w1-index.html
@@ -6,7 +6,7 @@
     </head> 
         <body> 
             <h1>Joshua Watkins</h1>
-             <img src="images/31388514_1613062658747765_3822769859809247232_o.jpg" alt="my face" height= "25%" width= "25%"/>
+             <img src="images/31388514_1613062658747765_3822769859809247232_o (1).jpg" alt="my face" height= "25%" width= "25%"/>
               <h2>VA, United States</h2>
                <p> Laptop<br>
                      <b>Operating System:</b> windows 10 <br>
