--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   <head>
-      <title>Untitled Document</title>
+      <title>Cit 230 lesson 3 | Valadation Assignment | Joshua Watkins</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
       <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
       <style>
           .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;
@@ -9,12 +11,13 @@
 </style>
       <link rel="stylesheet" href="styles/main.css">     
   </head>
-  <div id="header">
-  <div id="siteTitle">The Quad-Cities Transporation Center</div>
-      <div id="subTitle">"We have your transporation needs covered!"  </div>
-  </div>
+  <body>
+  <header>
+  <h1 id="siteTitle">The Quad-Cities Transporation Center</h1>
+      <h2 id="subTitle">"We have your transporation needs covered!"  </h2>
+  </header>
     
-    <div id="nav">
+    <nav>
     <ul>
         <li><a href="#" class="current">Home</a></li>
     <li><a href="products/">Products</a></li>
@@ -24,7 +27,7 @@
         <li><a href="contact/">Contact Us</a></li>
                 <li><a href="search/">Search</a></li>
     </ul>
-    </div>
+    </nav>
 <div id="main">
 <div>
     <img src="http://lorempixel.com/300/200/transport" alt= "transportation" width="300" height="200">
