index page update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>CIT 230-Assignment Portal</h2>
             <ul>
                 <li>lesson 1: <a href="w1-index.html">basic html</a></li>
-                <li>lesson 3: <a href=""> assignment label</a></li>
+                <li>lesson 3: <a href="fixedhtml.html">HTML Markup Validation</a></li>
                 <li>lesson 4: <a href=""> assignment label</a></li>
                 <li>lesson 5: <a href=""> assignment label</a></li>
             </ul>
