--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang= "en-us">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
+        <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
+        <link rel="stylesheet" href="assignments/lesson-4/css/main.css">       
     </head>
     <body>
         <header>
             <!--logo-->
-          <h1>The Wheather site</h1>
-            <div class= motto></div>
+          <h3>The Wheather site</h3>
+            <div class= motto>where the weather is at</div>
         </header>
         <nav>
             <ul>
@@ -21,11 +24,21 @@
         </nav>
         <main>
             <section>
-
+                <h1>town name</h1>
+                <!--hero image-->
+                <!--weather summary-->
             </section>
             <article>
+                <h2>Article title</h2>
+                <h5>author</h5>
+                <p>
 
+                </p>
+                <!--article image-->
             </article>
+            <section>
+               <p> contact info</p>
+            </section>
         </main>
         <footer>
 
