--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -38,6 +38,7 @@
             </article>
             <section>
                <p> contact info</p>
+               <!--map-->
             </section>
         </main>
         <footer>
