--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -9,18 +9,20 @@
     <body>
         <header>
             <!--logo-->
-          <h3>The Wheather site</h3>
-            <div class= motto>where the weather is at</div>
+            <section>
+                <h3>The Wheather site</h3>
+             <div class= motto>where the weather is at</div>
+            </section>
         </header>
 
         <nav>
             <ul>
-                <li>home</li>
-                <li>preston</li>
-                <li>soda springs</li>
-                <li>fish haven</li>
-                <li>storm center</li>
-                <li>gallery</li>
+                <li><a></a>home</li>
+                <li><a></a>preston</li>
+                <li><a></a>soda springs</li>
+                <li><a></a>fish haven</li>
+                <li><a></a>storm center</li>
+                <li><a></a>gallery</li>
             </ul>
         </nav>
 
@@ -45,7 +47,7 @@
                <!--map-->
             </section>
         </main>
-        
+
         <footer>
 
         </footer>
