--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
-        <link rel="stylesheet" href="assignments\lesson-4\css\small-4.css">  
+        <link rel="stylesheet" href="css\small-4.css">  
     </head>
     <body>
         <header>
