--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -35,7 +35,7 @@
 
             <article>
                 <h2>Article title</h2>
-                <h5>author</h5>
+                    <p>author</p>
                 <p>
 
                 </p>
