--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -37,7 +37,9 @@
                 <h2>Article title</h2>
                     <p>author</p>
                 <p>
-
+                    jshfkjafdujahslkjfhsalkjhfjasdlha<br>
+                    sajbkjsafblkjhfjasgfjahslkjahdsfjjfsahjhsajfjhasjhfkjhkjashfkjhkjas<br>
+                    hsfhgjhsjfhjshfjhsajfhjsfjsjfjsfhjjkasfjhgjasj<br>
                 </p>
                 <!--article image-->
             </article>
@@ -48,6 +50,8 @@
         <footer>
             <section>
                 <p> contact info</p>
+                phone:<br>
+                email:<br>
                 <!--map-->
              </section>
         </footer>
