--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -12,6 +12,7 @@
             <section>
                 <h3>The Wheather site</h3>
              <div class= motto>where the weather is at</div>
+             <!--current conditions-->
             </section>
         </header>
 
