site test with css

--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -8,53 +8,54 @@
     </head>
     <body>
         <header>
-            <!--logo-->
+            <!--logo--><img src="" alt="">
             <section>
-                <h3>The Wheather site</h3>
-             <div class= motto>where the weather is at</div>
+                <h1>The Wheather potato</h1>
+             <div class= motto>where the weather grows</div>
              <!--current conditions-->
             </section>
         </header>
 
         <nav>
             <ul>
-                <li><a></a>home</li>
-                <li><a></a>preston</li>
-                <li><a></a>soda springs</li>
-                <li><a></a>fish haven</li>
-                <li><a></a>storm center</li>
-                <li><a></a>gallery</li>
+                <li><a>home</a></li>
+                <li><a>preston</a></li>
+                <li><a>soda springs</a></li>
+                <li><a>fish haven</a></li>
+                <li><a>storm center</a></li>
+                <li><a>gallery</a></li>
             </ul>
         </nav>
 
         <main>
             <section>
-                <h1>town name</h1>
-                <!--hero image-->
+                <h2>Preston</h2>
+                <!--hero image--><img src="" alt="">
                 <!--weather summary-->
             </section>
 
             <article>
-                <h2>Article title</h2>
-                    <p>author</p>
-                <p>
-                    jshfkjafdujahslkjfhsalkjhfjasdlha<br>
-                    sajbkjsafblkjhfjasgfjahslkjahdsfjjfsahjhsajfjhasjhfkjhkjashfkjhkjas<br>
-                    hsfhgjhsjfhjshfjhsajfhjsfjsjfjsfhjjkasfjhgjasj<br>
+                <h3>Article title</h3>
+                    <p id="author">author</p>
+                <p><br>
+                    jshfkjafdujahslkjfhsalkjhfjasdlhasajbkjsafblkj<br>
+                    hfjasgfjahslkjahdsfjjfsahjhsajfjhasjhfkjhkjashfkjhkjas
+                    hsfhgjhsjfhjshfjhsajfhjsfjsjfjsfhjjkasfjhgjasj
                 </p>
-                <!--article image-->
+                <!--article image--><img src="" alt="">
             </article>
 
             
         </main>
-
+        
         <footer>
             <section>
                 <p> contact info</p>
                 phone:<br>
                 email:<br>
-                <!--map-->
+                <!--map--><img src="" alt="">
              </section>
+             <p>&copy;2019 the weather site | Attributions | Joshua Watkins wednesday, 15 May 2019</p>
         </footer>
     </body>
 </html>
