--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <!--logo--><img src="potat0.png" alt="logo">
+            <!--logo--><img src="images/potat0.png" alt="logo">
             <section>
                 <h1>The Wheather potato</h1>
              <div class= motto>where the weather grows</div>
@@ -30,7 +30,7 @@
         <main>
             <section>
                 <h2>Preston</h2>
-                <!--hero image--><img src="hero-image.jpeg" alt="hero image">
+                <!--hero image--><img src="images/hero-image.jpeg" alt="hero image">
                 <!--weather summary-->
             </section>
 
@@ -42,7 +42,7 @@
                     hfjasgfjahslkjahdsfjjfsahjhsajfjhasjhfkjhkjashfkjhkjas
                     hsfhgjhsjfhjshfjhsajfhjsfjsjfjsfhjjkasfjhgjasj
                 </p>
-                <!--article image--><img src="img-home-derringer1.jpeg" alt="article image">
+                <!--article image--><img src="images/img-home-derringer1.jpeg" alt="article image">
             </article>
 
             
@@ -53,7 +53,7 @@
                 <p> contact info</p>
                 phone:<br>
                 email:<br>
-                <!--map--><img src="preston-map.jpeg" alt="map">
+                <!--map--><img src="images/preston-map.jpeg" alt="map">
              </section>
              <p>&copy;2019 the weather potato | Attributions | Joshua Watkins wednesday, 15 May 2019</p>
         </footer>
