--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -30,7 +30,7 @@
         <main>
             <section>
                 <h2>Preston</h2>
-                <!--hero image--><img src="images/hero-image.jpeg" alt="hero image">
+                <!--hero image--><img src="images/hero-image.jpg" alt="hero image">
                 <!--weather summary-->
             </section>
 
@@ -42,7 +42,7 @@
                     hfjasgfjahslkjahdsfjjfsahjhsajfjhasjhfkjhkjashfkjhkjas
                     hsfhgjhsjfhjshfjhsajfhjsfjsjfjsfhjjkasfjhgjasj
                 </p>
-                <!--article image--><img src="images/img-home-derringer1.jpeg" alt="article image">
+                <!--article image--><img src="images/img-home-derringer1.jpg" alt="article image">
             </article>
 
             
@@ -53,7 +53,7 @@
                 <p> contact info</p>
                 phone:<br>
                 email:<br>
-                <!--map--><img src="images/preston-map.jpeg" alt="map">
+                <!--map--><img src="images/preston-map.jpg" alt="map">
              </section>
              <p>&copy;2019 the weather potato | Attributions | Joshua Watkins wednesday, 15 May 2019</p>
         </footer>
