nav links update

--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a>home</a></li>
-                <li><a>preston</a></li>
+                <li id="active"><a>preston</a></li>
                 <li><a>soda springs</a></li>
                 <li><a>fish haven</a></li>
                 <li><a>storm center</a></li>
