--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <!--logo--><img src="images/potat0.png" alt="logo">
-            <section>
+            <section class="headings">
                 <h1>The Wheather potato</h1>
              <div class= motto>where the weather grows</div>
              <!--current conditions-->
