--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
-        <link rel="stylesheet" href="css\small-4.css">  
+        <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css\small-5.css">  
+        <link rel="stylesheet" href="css/noramlize.css">
+        
     </head>
     <body>
         <header>
@@ -18,6 +21,7 @@
         </header>
 
         <nav>
+            <button>menu</button>
             <ul>
                 <li><a>home</a></li>
                 <li id="active"><a>preston</a></li>
