--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
         <meta name="description" content="Assignment portal page for Josh Watkins in CIT 230: web front-end developement at BYU-I">
+        <link rel="stylesheet" href="css/noramlize.css">
         <link rel="stylesheet" href="css/main.css">
         <title>Cit 230 Assignment Portal | Joshua Watkins | BYU-Idaho</title>
     </head>
