--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>lesson 1: <a href="w1-index.html">basic html</a></li>
                 <li>lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation</a></li>
                 <li>lesson 4: <a href="assignments/lesson-4/weathersiteplan.pdf"> Weather site plan</a></li>
-                <li>lesson 5: <a href=""> assignment label</a></li>
+                <li>lesson 5: <a href="assignments/lesson-5/preston-5.html"> weather town page</a></li>
             </ul>
         </main>
 
