--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
         <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css\large-5.css">
-        <link rel="stylesheet" href="css\small-5.css">  
         <link rel="stylesheet" href="css/noramlize.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px)" href="css/large-5.css">
+        <link rel="stylesheet" href="css\small-5.css">  
+       
         
     </head>
     <body>
