--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -7,10 +7,8 @@
         <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/noramlize.css">
         <link rel="stylesheet" media="screen and (min-width: 600px)" href="css/large-5.css">
-        <link rel="stylesheet" href="css\small-5.css">  
-       <script>
-           
-       </script>
+        <link rel="stylesheet" href="css/small-5.css">  
+      <title>lesson 5 </title>
         
     </head>
     <body>
