date and forecast

--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -34,7 +34,7 @@
                 <li><a>gallery</a></li>
             </ul>
         </nav>
-        <script src="script/currentdate.js"></script>
+        
         <main>
             <section>
                 <h2>Preston</h2>
@@ -95,8 +95,9 @@
                 email:<br>
                 <!--map--><img src="images/preston-map.jpg" alt="map">
              </section>
-             <p>&copy;2019 the weather potato | Attributions | </p>
+             <p>&copy;2019 the weather potato | Attributions |<span id="currentdate"></span> </p>
         </footer>
-        <script src="script/"></script>
+        <script src="script/navagation.js"></script>
+        <script src="script/currentdate.js"></script>
     </body>
 </html>
