--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li>lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation</a></li>
                 <li>lesson 4: <a href="assignments/lesson-4/weathersiteplan.pdf"> Weather site plan</a></li>
                 <li>lesson 5: <a href="assignments/lesson-5/preston-5.html"> weather town page</a></li>
+                <li>lesson 6: <a href="assignments/lesson-6/preston-6.html"> weather town page</a></li>
             </ul>
         </main>
 
