--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -25,7 +25,7 @@
            
             <ul class="topNav">
                 <li><a onclick="toggleMenu()">&#9776; menu</a></li>
-                <li><a >  home</a></li>
+                <li><a >  home</a></li>asfsdgdd
                 <li id="active"><a>preston</a></li>
                 <li><a>soda springs</a></li>
                 <li><a>fish haven</a></li>
