--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -39,7 +39,9 @@
             <section>
                 <h2>Preston</h2>
                 <div class="overlay">
-                <!--hero image--><img class="hero-image" src="images/cit230_image_franklinOriginal.jpeg" alt="hero image">
+                <!--hero image--><img class="hero-image" src="images/cit230_image_franklinOriginal.jpeg" alt="hero image" sizes="100vw"
+                                                        srcset="images/small.jpeg 600w,
+                                                                images/large.jpeg 1322w">
                 <!--weather summary--><section class="weathersummary">
                 <h3>weather summary</h3>
                 <p>label: value</p>
