--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -40,8 +40,8 @@
                 <h2>Preston</h2>
                 <div class="overlay">
                 <!--hero image--><img class="hero-image" src="images/cit230_image_franklinOriginal.jpeg" alt="hero image" sizes="100vw"
-                                                        srcset="images/small.jpeg 600w,
-                                                                images/large.jpeg 800w
+                                                        srcset="images/cit230_image_franklinOriginalsmall.jpeg 600w,
+                                                                images/cit230_image_franklinOriginallarge.jpeg 800w
                                                                 ">
                 <!--weather summary--><section class="weathersummary">
                 <h3>weather summary</h3>
