--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -39,10 +39,7 @@
             <section>
                 <h2>Preston</h2>
                 <div class="overlay">
-                <!--hero image--><img class="hero-image" src="images/cit230_image_franklinOriginal.jpeg" alt="hero image" sizes="100vw"
-                                                        srcset="images/cit230_image_franklinOriginalsmall.jpeg 2210w,
-                                                                images/cit230_image_franklinOriginallarge.jpeg 2947w
-                                                                ">
+                <!--hero image--><img class="hero-image" src="images/cit230_image_franklinOriginal.jpeg" alt="hero image" >
                 <!--weather summary--><section class="weathersummary">
                 <h3>weather summary</h3>
                 <p>label: value</p>
