image response media

--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -41,8 +41,8 @@
                 <div class="overlay">
                     <picture>
                 <!--hero image--><img class="hero-image" src="images/cit230_image_franklinOriginalsmall.jpg" alt="hero image"> 
-                                <source media="(min-width: 650px)" srcset="images/cit230_image_franklinOriginallarge.jpg">
-                                <source media="(min-width: 465px)" srcset="images/cit230_image_franklinOriginalsmall.jpg">
+                                <source media="(min-width: 601px)" srcset="images/cit230_image_franklinOriginallarge.jpg">
+                                <source media="(max-width: 600px)" srcset="images/cit230_image_franklinOriginalsmall.jpg">
                     </picture>
                 <!--weather summary--><section class="weathersummary">
                 <h3>weather summary</h3>
