gallery uplaod test

--- a/assignments/lesson-7/preston-7.html
+++ b/assignments/lesson-7/preston-7.html
@@ -6,8 +6,8 @@
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
         <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="CSS/normalize.css">
-        <link rel="stylesheet" href="CSS/small-6.css">
-        <link rel="stylesheet" media="screen and (min-width: 601px)" href="CSS/large-6.css">
+        <link rel="stylesheet" href="CSS/small-7.css">
+        <link rel="stylesheet" media="screen and (min-width: 601px)" href="CSS/large-7.css">
       <title>lesson 6 </title>
         
     </head>
@@ -47,9 +47,11 @@
                     </picture>
                 <!--weather summary--><section class="weathersummary">
                 <h3>weather summary</h3>
-                <p>label: value</p>
-                <p>label: value</p>
-                <p>label: value</p>
+                <p>currently:<span>Sunny</span></p>
+                <p>high:<span id= "temperature">76</span> &#8457;</p>
+                <p>wind chill:<span id="windchill"></span></p>
+                <p>humidity:<span>69%</span></p>
+                <p>wind speed:<span id= "windspeed">5</span>mph</p>
             </section>
             </div>
             </section>
@@ -104,5 +106,6 @@
         </footer>
         <script src="script/navagation.js"></script>
         <script src="script/currentdate.js"></script>
+        <script src="script/windchill.js"></script>
     </body>
 </html>
