--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li>lesson 4: <a href="assignments/lesson-4/weathersiteplan.pdf"> Weather site plan</a></li>
                 <li>lesson 5: <a href="assignments/lesson-5/preston-5.html"> weather town page</a></li>
                 <li>lesson 6: <a href="assignments/lesson-6/preston-6.html"> weather town page</a></li>
+                <li>lesson 7: <a href="assignments/lesson-7/preston-7.html"> flexbox grid</a></li>
             </ul>
         </main>
 
