--- a/assignments/lesson-8/tablebuild.html
+++ b/assignments/lesson-8/tablebuild.html
@@ -9,11 +9,14 @@
       </header>
       
         <table id="t01" align="center">
+            <thead>
                 <tr>
                   <th>Period</th>
                   <th>Sales</th> 
                   <th>Sales Goals</th>
                 </tr>
+            </thead>
+            <tbody>
                 <tr>
                   <td>August</td>
                   <td>$3,590</td>
@@ -38,12 +41,14 @@
                     <td class="blfri">Black Friday</td>
                     <td colspan="2">$3,200</td>
                 </tr>
+              </tbody>
+               <tfoot>
                 <tr>
                     <td>December</td>
                     <td>$6,820</td>
                     <td>$7,500</td>
                 </tr>
-
+              </tfoot>
               </table>
               
               <footer>
