--- a/assignments/lesson-8/tablebuild.html
+++ b/assignments/lesson-8/tablebuild.html
@@ -8,7 +8,7 @@
         
       </header>
       
-        <table " align="center">
+        <table  align="center">
             <thead>
                 <tr>
                   <td colspan="3"><h1>ACME Wildwest</h1></td>
