--- a/assignments/lesson-8/preston-8.html
+++ b/assignments/lesson-8/preston-8.html
@@ -32,7 +32,7 @@
                 <li id="active"><a href="preston-8.html">preston</a></li>
                 <li><a>soda springs</a></li>
                 <li><a>fish haven</a></li>
-                <li><a>storm center</a></li>
+                <li><a href="stormcenter.html">storm center</a></li>
                 <li><a href="gallery-8.html">gallery</a></li>
             </ul>
         </nav>
