--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <li>lesson 5: <a href="assignments/lesson-5/preston-5.html"> weather town page</a></li>
                 <li>lesson 6: <a href="assignments/lesson-6/preston-6.html"> weather town page</a></li>
                 <li>lesson 7: <a href="assignments/lesson-7/preston-7.html"> flexbox grid</a></li>
-                <li>lesson 8: <a href="assignments/lesson-8/tablebuild.html"> table</a></li>
+                <li>lesson 8.1: <a href="assignments/lesson-8/tablebuild.html"> table</a></li>
+                <li>lesson 8.2: <a href="assignments/lesson-8/stormcenter.html"> Stormcenter</a></li>
             </ul>
         </main>
 
