--- a/assignments/lesson-8/stormcenter.html
+++ b/assignments/lesson-8/stormcenter.html
@@ -27,7 +27,7 @@
         <nav>
            
             <ul class="topNav">
-                <li><a onclick="toggleMenu()">&#9776; menu</a></li>
+                <li><a onclick="toggleMenu(">&#9776; menu</a></li>
                 <li><a >  home</a></li>
                 <li ><a href= "preston-8.html">preston</a></li>
                 <li><a>soda springs</a></li>
