--- a/assignments/lesson-8/stormcenter.html
+++ b/assignments/lesson-8/stormcenter.html
@@ -32,7 +32,7 @@
                 <li ><a href= "preston-8.html">preston</a></li>
                 <li><a>soda springs</a></li>
                 <li><a>fish haven</a></li>
-                <li id="active"href="stormcenter.html"><a>storm center</a></li>
+                <li  href="stormcenter.html" id="active"><a>storm center</a></li>
                 <li><a href= "gallery-8.html">gallery</a></li>
             </ul>
         </nav>
