--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -32,7 +32,7 @@
                 <li ><a href= "preston-7.html">preston</a></li>
                 <li><a>soda springs</a></li>
                 <li><a>fish haven</a></li>
-                <li><a>storm center</a></li>
+                <li><a href= "stormcenter.html">storm center</a></li>
                 <li id="active"><a href= "gallery-7.html">gallery</a></li>
             </ul>
         </nav>
