--- a/assignments/lesson-8/stormcenter-8.html
+++ b/assignments/lesson-8/stormcenter-8.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, intial-scale-1, maxium-scale-1">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
         <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="CSS/noramlize.css">
-        <link rel="stylesheet" href="CSS/small-8.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px)" href="CSS/medium-8.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="CSS/large-8.css">
+        <link rel="stylesheet" href="css/noramlize.css">
+        <link rel="stylesheet" href="css/small-8.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px)" href="css/medium-8.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="css/large-8.css">
         
       <title>gallery </title>
         
