--- a/assignments/lesson-8/gallery-8.html
+++ b/assignments/lesson-8/gallery-8.html
@@ -19,7 +19,7 @@
             <section class="headings">
                    
                 <h1>The Weather potato</h1>
-             <div class= motto>where the weather grows</div>
+             <div class= moto>where the weather grows</div>
              <!--current conditions-->
             </section>
         </header>
