--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li>lesson 7: <a href="assignments/lesson-7/preston-7.html"> flexbox grid</a></li>
                 <li>lesson 8.1: <a href="assignments/lesson-8/tablebuild.html"> table</a></li>
                 <li>lesson 8.2: <a href="assignments/lesson-8/stormcenter-8.html"> Stormcenter</a></li>
+                <li>lesson 9.1: <a href="assignments/lesson-9/heros.html"> json hero</a></li>
             </ul>
         </main>
 
