--- a/assignments/lesson-9/heros.html
+++ b/assignments/lesson-9/heros.html
@@ -15,13 +15,13 @@
 
       </header>
 
-      <section>
+      <section class= "heroes">
 
       </section>
 
     <script>
     var header = document.querySelector('header');
-    var section = document.querySelector('section');
+    var section = document.querySelector('.heroes');
     var requestURL = 'https://mdn.github.io/learning-area/javascript/oojs/json/superheroes.json';
     var request = new XMLHttpRequest();
     request.open('GET', requestURL);
