--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -55,6 +55,6 @@
         <script src="script/navagation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/windchill.js"></script>
-        <script src="script/towndataimport.js"></script>
+        <script src="script/towninfo.js"></script>
     </body>
 </html>
