--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -28,12 +28,12 @@
            
             <ul class="topNav">
                 <li><a onclick="toggleMenu()">&#9776; menu</a></li>
-                <li><a >  home</a></li>
+                <li id="active"><a >  home</a></li>
                 <li ><a href= "preston-8.html">preston</a></li>
                 <li><a>soda springs</a></li>
                 <li><a>fish haven</a></li>
                 <li><a href= "stormcenter-8.html">storm center</a></li>
-                <li id="active"><a href= "gallery-8.html">gallery</a></li>
+                <li ><a href= "gallery-8.html">gallery</a></li>
             </ul>
         </nav>
         
