--- a/assignments/lesson-10/prestonapi.html
+++ b/assignments/lesson-10/prestonapi.html
@@ -6,7 +6,7 @@
 <body>
     <h1>OpenWeatherMap.org API test</h1>
     <p>
-        the currenttempature in Preston, Idaho is <span id="cc-temp"></span>&deg; F
+        the currenttempature in Preston, Idaho is <span id="temp"></span>&deg; F
         <img id="cc-img" src="" alt="">
     </p>
 
