--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li>lesson 8.2: <a href="assignments/lesson-8/stormcenter-8.html"> Stormcenter</a></li>
                 <li>lesson 9.1: <a href="assignments/lesson-9/heros.html"> json hero</a></li>
                 <li>lesson 9.2: <a href="assignments/lesson-9/index-9.html"> home page</a></li>
+                <li>lesson 10: <a href="assignments/lesson-10/preston-10.html"> api</a></li>
             </ul>
         </main>
 
