--- a/assignments/lesson-10/preston-9.html
+++ b/assignments/lesson-10/preston-9.html
@@ -60,29 +60,24 @@
             <section>
                 <div class="row">
                     <div class="column">
-                        <h3><span id ="day1"></span></h3>
-                        <p><span id="temp1"></span> &#8457; </p>
-                        <img id="pic1">
+                        <h3>test</h3>
+                        <p><span id ="day1">  </span> </p>
                     </div>
                     <div class="column">
-                        <h3><span id ="day2"></span></h3>
-                        <p><span id="temp2"></span> &#8457; </p>
-                        <img id="pic2">
+                        <h3>test 2</h3>
+                        <p>lorem ipsum</p>
                     </div>
                     <div class="column">
-                        <h3><span id ="day3"></span></h3>
-                        <p><span id="temp3"></span> &#8457; </p>
-                        <img id="pic3">
+                        <h3>test 3</h3>
+                        <p>lorem ipsum</p>
                     </div>
                     <div class="column">
-                        <h3><span id ="day4"></span></h3>
-                        <p><span id="temp4"></span> &#8457; </p>
-                        <img id="pic4">
+                        <h3>test 4</h3>
+                        <p>loerm ipsum</p>
                     </div> 
                     <div class="column">
-                        <h3><span id ="day5"></span></h3>
-                        <p><span id="temp5"></span> &#8457; </p>
-                        <img id="pic5">
+                        <h3>test 5</h3>
+                        <p>lorem ipsum</p>
                     </div>
                   </div> 
             </section>
@@ -98,9 +93,8 @@
                 <!--article image--><img src="images/img-home-derringer1.jpg" alt="article image">
                 </div>
             </article>
-           <section class="events">
-               <h5>Town Events</h5>
-           </section>
+
+            
         </main>
         
         <footer>
@@ -110,12 +104,11 @@
                 email:<br>
                 <!--map--><img src="images/preston-map.jpg" alt="map">
              </section>
-             <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Openweathermap.org</a> |<span id="currentdate"></span> </p>
+             <p>&copy;2019 the weather potato | Attributions |<span id="currentdate"></span> </p>
         </footer>
         <script src="script/navagation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/windchill.js"></script>
         <script src="weatherapi.js"></script>
-        <script src="script/events.js"></script>
     </body>
 </html>
