--- a/assignments/lesson-10/preston-10.html
+++ b/assignments/lesson-10/preston-10.html
@@ -115,7 +115,7 @@
         <script src="script/navagation.js"></script>
         <script src="script/currentdate.js"></script>
         <script src="script/windchill.js"></script>
-        <script src="weatherapi.js"></script>
+        <script src="script/weatherapi.js"></script>
         <script src="script/events.js"></script>
     </body>
 </html>
