--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li>lesson 9.1: <a href="assignments/lesson-9/heros.html"> json hero</a></li>
                 <li>lesson 9.2: <a href="assignments/lesson-9/index-9.html"> home page</a></li>
                 <li>lesson 10: <a href="assignments/lesson-10/preston-10.html"> api</a></li>
+                <li>weathersite: <a href="assignments/weathersite/index-9.html"> weathersite</a></li>
             </ul>
         </main>
 
