--- a/assignments/weathersite/index-9.html
+++ b/assignments/weathersite/index-9.html
@@ -40,7 +40,7 @@
         <main>
             <section class="townData">
                     <h2> Home</h2>
-            </sectiion>
+            </section>
         </main>
     
         <footer>
