--- a/assignments/weathersite/index-9.html
+++ b/assignments/weathersite/index-9.html
@@ -2,7 +2,7 @@
 <html lang= "en-us">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1, maxium-scale=1">
+        <meta name="viewport" content="width=device-width, intial-scale= 1, maxium-scale= 1">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
         <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/noramlize.css">
@@ -38,8 +38,9 @@
         </nav>
         
         <main>
-            <section class="townData">
+            <section >
                     <h2> Home</h2>
+                    <div class="townData"></div>
             </section>
         </main>
     
