--- a/assignments/weathersite/preston-10.html
+++ b/assignments/weathersite/preston-10.html
@@ -2,7 +2,7 @@
 <html lang= "en-us">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1, maxium-scale=1">
+        <meta name="viewport" content="width=device-width, intial-scale= 1, maxium-scale= 1">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
         <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/noramlize.css">
@@ -108,7 +108,7 @@
             <section>
                     <h5> contact info</h5>
                     phone: 000-000-1234<br>
-                    email:iamnotrealwebsite@weather.com<br><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5116841.758548287!2d-118.4979723692034!3d-79.2579946203537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1562465283016!5m2!1sen!2sus" width="300" height="225" frameborder="0" style="border:0" ></iframe>
+                    email:iamnotrealwebsite@weather.com<br><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5116841.758548287!2d-118.4979723692034!3d-79.2579946203537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1562465283016!5m2!1sen!2sus" width="300" height="225"  ></iframe>
                 <!--map-->
              </section>
              <p>&copy;2019 the weather potato | Attributions:<a href="https://openweathermap.org/">Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</a> |<span id="currentdate"></span> </p>
