--- a/assignments/weathersite/stormcenter-9.html
+++ b/assignments/weathersite/stormcenter-9.html
@@ -50,7 +50,7 @@
                     Phone Number<br>
                     *<input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000" required><br>
                     Zipcode<br>
-                    *<input type="number" name="zcode" pattern="[0-9]{5}" placeholder="12345" required><br>
+                    *<input type="text" name="zcode" pattern="[0-9]{5}" placeholder="12345" required><br>
                 </fieldset>
                 <fieldset>
                         <legend>Storm Info</legend>
@@ -72,7 +72,7 @@
 		                    <span id="ratevalue">5</span><br>
                         Storm Region<br>
                         <select required>
-                            <option value="selectregion" selected="default" disabled>select region</option>
+                            <option value="selectregion" size="4" selected="default" disabled>select region</option>
                             <option value="preston" >Preston</option>
                             <option value="fishhaven" >Fish Haven</option>
                             <option value="sugarcity" >Sugar City</option>
