--- a/assignments/weathersite/stormcenter-9.html
+++ b/assignments/weathersite/stormcenter-9.html
@@ -72,7 +72,7 @@
 		                    <span id="ratevalue">5</span><br>
                         Storm Region<br>
                         <select required>
-                            <option value="selectregion" size="4" selected="placeholder" disabled>select region</option>
+                            <option value="selectregion"  selected="placeholder" disabled>select region</option>
                             <option value="preston" >Preston</option>
                             <option value="fishhaven" >Fish Haven</option>
                             <option value="sugarcity" >Sugar City</option>
